--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.0'
     implementation 'com.android.support:recyclerview-v7:26.0.2'
     compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
