--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.butter.butterssc">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,6 +21,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.TrendDetailActivity">
+        </activity>
+        <activity android:name=".ui.activity.NewsDetailActivity">
         </activity>
     </application>
 
