--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     implementation files('libs/zxing.jar')
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
